Added gitignore and updated question

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <section >
             <div class="heading">
                 <h1 class="title">Daily Quiz</h1>
-                <p class="subtitle">Daily quiz to test your knowledge</p>
+                <p class="subtitle">Daily quiz to test your knowledge !</p>
             </div>
             <div class="result hide">
                 <p class="mark">Out of 5!</p>
@@ -42,7 +42,7 @@
                     </div>
                 </div>
                 <div class="question">
-                    <p>2. How can a datatype be declared to be a constant type ? </p>
+                    <p>2. How can a datatype be declared as a constant type ? </p>
                     <div class="option">
                         <input type="radio" name="q2" value="A" checked>
                         <label for="">const</label>
@@ -80,7 +80,7 @@
                     </div>
                 </div>
                 <div class="question">
-                    <p>4. What is the output of the following code snippet<br>
+                    <p>4. What is the output of the following code snippet ?<br>
                     <span style="color:red; margin: 10px;display: block;">"print(NaN === NaN)"</span></p>
                     <div class="option">
                         <input type="radio" name="q4" value="A" checked>
